[workspace]
resolver = "3"
members = [ "tachyon/core","tachyon/gpu"]

[workspace.package]
authors = ["Manish Kumar <manish@neocraft.tech>"]
edition = "2024"
homepage = "https://neocraft.tech/"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/neocrafttech/tachyon"
rust-version = "1.87.0"
version = "0.1.0"

[workspace.dependencies]
cargo-nextest = "0.9.1"
mimalloc = { version = "*", features = ["v3"] }
thiserror = "2.0.17"
sha2 = "0.10.9"
rand = "0.9.2"
half = { version = "2.7.1", features = ["bytemuck", "num-traits", "serde", "std", "rand_distr"] }
indoc = "2.0.7"
arrow = "57.0.0"
dirs = "6.0.0"
