[package]
name = "compute"
description = "Core library for Tachyon"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
thiserror.workspace = true
half.workspace = true
sha2.workspace = true
gpu = { path = "../gpu" }

[features]
default = []
gpu = []

[dev-dependencies]
rand.workspace = true
arrow.workspace = true
