[package]
name = "core"
description = "Core library for Tachyon"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
half.workspace = true
gpu = { path = "../gpu" }

[features]
default = []
gpu = []

[dev-dependencies]
rand.workspace = true
arrow.workspace = true
