[package]
name = "gpu"
description = "GPU library for Tachyon"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
gpu = []

[dependencies]
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand.workspace = true
